Final draft of HW1

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- HW1: Code Refractor Assignment: Objective of the assignment is to polish and refine existing code-->
 <!DOCTYPE html>
 <html lang="en-us">
 
@@ -7,6 +8,7 @@
     <title>Horiseon Technologies</title>
 </head>
 
+<!-- Navigational toolbar on top-->
 <body>
     <nav class="header">
         <h1>Horiseon</h1>
@@ -25,6 +27,7 @@
         </div>
     </nav>
    
+<!-- Main portion of the webpage in the center-->
     <article class="content">
         <section class="search-engine-optimization">
             <img src="assets/images/search-engine-optimization.jpg" class="float-left" alt="seo"/>
@@ -51,6 +54,7 @@
         </section>
     </article>
 
+<!-- Side portion of webpage on the right-->
     <article class="benefits">
         <aside class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -78,6 +82,7 @@
 
     </article>
 
+    <!-- Footer of webpage for copyright materials-->
     <footer class="footer">
         <h2>Made with ❤️️by Horiseon</h2>
         <p>
