Fixed background image

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </nav>
    
 <!-- Main portion of the webpage in the center-->
+<div class="hero"></div>
     <article class="content">
         <section class="search-engine-optimization">
             <img src="assets/images/search-engine-optimization.jpg" class="float-left" alt="seo"/>
